[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-prior-auth"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "bedrock-agentcore >= 1.0.3",
    "boto3 >= 1.38.0",
    "pandas >= 1.5.0",
    "PyPDF2 >= 3.0.0",
    "requests >= 2.28.0",
    "strands-agents >= 1.18.0",
    "strands-agents-tools >= 0.2.16",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "ruff >= 0.12.0",
    "bandit >= 1.9.0",
]

[tool.setuptools.package-data]
"tools" = ["data/*.json"]
